# learn-cpp-note

./: .gitignore  README.md  account.cpp  main.cpp  singleton.cpp  temp_class.cpp  template.cpp
Asan/: Asan_debug.md
RAII/: Makefile  String.cc  String.h  main.cc
SFINAE/: CMakeLists.txt  EBO.cc  IF.cc  SFINAE.md  example01.cc  example02.cc  example03.cc  example04.cc  fmap.cc  link_invoke.cc  sstring_parseInt.cc  two_example.cc
SPSCQueue/: Makefile  SPSCQueue.hpp  main.cpp
SmartPtr/: README.md  smart_ptr.cc
adaptor/: insertor.hpp  main.cpp
addr/: README.md  main.cpp
alloc/: Makefile  README.md  alloc.h  alloc_test.cc  allocator.cc  allocator.h  defaultAlloc.cc
blockedQueue/: BlockedQueue.h  nonecopyable.h
buffer/: Buffer-test.cc  Buffer.cc  Buffer.h  Makefile  buffer.h  debug_large.cc  debug_test.cc  debug_test2.cc  debug_test3.cc
class_converter/: README.md  demo.cc
complex/: build  complex-test.cpp  complex.h
component/: component.h  composite.h  primitive.h
conversion/: build  fraction-test.cpp  fraction.h
cpp_things/day2/: CMakeLists.txt  Stack.cc  enum.cc  friend.cc  func_spacial.cc  operator*.cc  operator++.cc  virtual.cc  virtual.md  virtual01.cc
decltype/: demo.cc
extern_C/: Makefile  demo.cc
file/: CMakeLists.txt  file.h  main.cc
function_like/: equals-test.cpp  equals.h
function_template/: compare-test.cpp  compare.h
function_trait/: Service.h  function_trait.h  main.cc  tuple_printer.h
lambda/: demo.cc
list/: main.cpp
logger/: LogLevel.h  Logger.h  Makefile  Stream.h  TimeStamp.h  test.cc
memory/: README.md  (+1 more)
(+79 files in other folders)
