project(SFINAE_example)

add_executable(example01 example01.cc)

add_executable(example02 example02.cc)

add_executable(example03 example03.cc)

add_executable(example04 example04.cc)

add_executable(sstring_parseInt sstring_parseInt.cc)


add_executable(two_example two_example.cc)

add_executable(IF IF.cc)

add_executable(fmap fmap.cc)

add_executable(EBO EBO.cc)