project(day2 C CXX)

add_executable(enum enum.cc)

add_executable(friend friend.cc)

add_executable(virtual virtual.cc)

add_executable(virtual01 virtual01.cc)

add_executable(operator++ operator++.cc)

add_executable(operator* operator*.cc)

add_executable(stack Stack.cc)

add_executable(func_spacial func_spacial.cc)